@startuml Ports
!include _style.puml

title Ports — Repository, Infrastructure & Domain Service Interfaces

package "Repository Ports" {

    interface IUserRepository <<port>> {
        + FindByID(ctx, id UserID) : (*User, error)
        + FindByEmail(ctx, email Email) : (*User, error)
        + FindAll(ctx, offset, limit int) : ([]*User, error)
        + Count(ctx) : (int64, error)
        + Save(ctx, user *User) : error
        + Delete(ctx, id UserID) : error
    }

    interface ISessionRepository <<port>> {
        + FindByID(ctx, id SessionID) : (*Session, error)
        + FindByToken(ctx, token HashedToken) : (*Session, error)
        + FindByPreviousToken(ctx, token HashedToken) : (*Session, error)
        + FindActiveByUserAndFingerprint(ctx, userID, fp) : (*Session, error)
        + FindActiveByUserID(ctx, userID) : ([]*Session, error)
        + Save(ctx, session *Session) : error
        + RevokeAllForUser(ctx, userID, now) : error
    }

    interface IRoleRepository <<port>> {
        + FindByID(ctx, id RoleID) : (*Role, error)
        + FindByName(ctx, name RoleName) : (*Role, error)
        + FindAll(ctx) : ([]*Role, error)
        + Save(ctx, role *Role) : error
    }

    interface IRecoveryTokenRepository <<port>> {
        + FindByHash(ctx, hash RecoveryTokenHash) : (*RecoveryToken, error)
        + Save(ctx, token *RecoveryToken) : error
        + RevokeAllForUser(ctx, uid UserID) : error
    }

    interface IActivationTokenRepository <<port>> {
        + FindByHash(ctx, hash ActivationTokenHash) : (*ActivationToken, error)
        + Save(ctx, token *ActivationToken) : error
        + RevokeAllForUser(ctx, uid UserID) : error
    }
}

package "Infrastructure Ports" {

    interface IClock <<port>> {
        + Now() : time.Time
    }

    interface IPasswordService <<port>> {
        + Hash(pwd ValidatedPassword) : (HashedPassword, error)
        + Compare(raw string, hashed HashedPassword) : bool
    }

    interface IIDGenerator <<port>> {
        + GenerateUserID() : (UserID, error)
        + GenerateSessionID() : (SessionID, error)
        + GenerateRecoveryTokenID() : (RecoveryTokenID, error)
        + GenerateActivationTokenID() : (ActivationTokenID, error)
        + GenerateRoleID() : (RoleID, error)
    }

    interface ITokenService <<port>> {
        + Generate() : (string, error)
        + HashSessionToken(raw string) : (HashedToken, error)
        + HashRecoveryToken(raw string) : (RecoveryTokenHash, error)
        + HashActivationToken(raw string) : (ActivationTokenHash, error)
        + CompareSession(raw string, hashed HashedToken) : bool
        + CompareRecovery(raw string, hashed RecoveryTokenHash) : bool
        + CompareActivation(raw string, hashed ActivationTokenHash) : bool
    }

    interface IAccessService <<port>> {
        + Issue(userID, email, sessionID, roles, permissions, issuedAt, expiresAt, notBefore) : (AccessToken, time.Time, error)
        + Validate(token AccessToken) : (AccessIdentity, error)
    }
}

package "Domain Service Ports" {

    interface IRegistrationRoleProvider <<port>> {
        + DefaultMemberRole(ctx) : (RoleName, error)
        + DefaultAdminRole(ctx) : (RoleName, error)
    }

    note bottom of IRegistrationRoleProvider
        Adapter wraps IRoleRepository.
        Role name strings ("member", "super_admin")
        live only in the adapter, outside domain.
        DB (seeded from seed_roles.yml) is the
        single source of truth.
    end note
}

package "Value Objects (produced / consumed)" <<Cloud>> {
    class HashedPassword <<Value Object>>
    class ValidatedPassword <<Value Object>>
    class UserID <<Value Object>>
    class SessionID <<Value Object>>
    class RecoveryTokenID <<Value Object>>
    class ActivationTokenID <<Value Object>>
    class RoleID <<Value Object>>
    class RoleName <<Value Object>>
    class HashedToken <<Value Object>>
    class RecoveryTokenHash <<Value Object>>
    class ActivationTokenHash <<Value Object>>
    class AccessToken <<Value Object>>
    class AccessIdentity <<Value Object>>
    class Permission <<Value Object>>
    class SessionExpiry <<Value Object>>
}

IPasswordService ..> ValidatedPassword : consumes
IPasswordService ..> HashedPassword : produces
IIDGenerator ..> UserID : produces
IIDGenerator ..> SessionID : produces
IIDGenerator ..> RecoveryTokenID : produces
IIDGenerator ..> ActivationTokenID : produces
IIDGenerator ..> RoleID : produces
ITokenService ..> HashedToken : produces
ITokenService ..> RecoveryTokenHash : produces
ITokenService ..> ActivationTokenHash : produces
IAccessService ..> AccessToken : produces
IAccessService ..> AccessIdentity : produces
IRegistrationRoleProvider ..> RoleName : produces

IUserRepository ..> User : manages
ISessionRepository ..> Session : manages
IRoleRepository ..> Role : manages
IRecoveryTokenRepository ..> RecoveryToken : manages
IActivationTokenRepository ..> ActivationToken : manages

@enduml
